--- a/django_blog/templates/index.html
+++ b/django_blog/templates/index.html
@@ -72,24 +72,48 @@
       </div>
     </header>
 
+    {% block search_bar %}
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 search">
+            <form method="get">
+                <div id="custom-search-input">
+                  <div class="input-group col-md-12">
+                    <input type="text" class="form-control" placeholder="Search..." name="search" value = {{request.GET.search}}>
+                    <span class="input-group-list">
+                      <i class="icon icon-search"></i>
+                      <button type="submit" class="boton btn-success">Search</button>
+                    </span>
+                  </div>
+                </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    {% endblock search_bar %}
     <!-- Main Content -->
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                Man must explore, and this is exploration at its greatest
-              </h2>
-              <h3 class="post-subtitle">
-                Problems look mighty small from 150 miles up
-              </h3>
-            </a>
-            <p class="post-meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on September 24, 2018</p>
-          </div>
-          <hr>
+          {% block content %}
+            {% if posts %}
+              {% for post in posts %}
+                <div class="post-preview">
+                  <a href="{% url 'blog:detail_post' post.slug%}">
+                  <h2 class="post-title">{{post.title}}</h2>
+                  <h3 class="post-subtitle">{{post.description}}</h3>
+                  </a>
+                  <p class="post-meta">Posted by
+                  <a href="#">{{post.author}}</a>
+                  {{post.creation_date}}</p>
+                </div>
+                <hr>
+              {% endfor %}
+            {% else %}
+              <h1>No posts</h1>
+            {% endif %}
+          {% endblock content %}
+          
           <!-- Pager -->
           <div class="clearfix">
             <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
